--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-DB_USERNAME=mernpractice
-DB_PASSWORD=mernpractice
+DB_USERNAME= mernpractice
+DB_PASSWORD= mernpractice
+
 JWT_SECRET=mysecretkey123456789
